# diecast

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  setup
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: anonymization-lint.yml  audit.yml  cast-delegation-e2e-nightly.yml  e2e.yml  nightly.yml  setup-correctness.yml  shellcheck.yml
agents/: README.md
agents/_shared/: polling.py  proactive.py  review_apply.py  terminal.py
agents/cast-code-explorer/: README.md  cast-code-explorer.md  config.yaml
agents/cast-comment-html/: README.md  cast-comment-html.md  comment_html.py  config.yaml  package-lock.json  package.json
agents/cast-comment-reanchor/: cast-comment-reanchor.md  config.yaml
agents/cast-controller/: cast-controller.md
agents/cast-controller-test/: cast-controller-test.md  config.yaml
agents/cast-create-execution-plan/: cast-create-execution-plan.md  config.yaml
agents/cast-crud-compliance-checker/: cast-crud-compliance-checker.md  config.yaml
agents/cast-crud-orchestrator/: cast-crud-orchestrator.md  config.yaml
agents/cast-custom-controller/: cast-custom-controller.md  config.yaml
agents/cast-detailed-plan/: cast-detailed-plan.md  config.yaml
agents/cast-doctor/: cast-doctor.md
agents/cast-entity-creation/: cast-entity-creation.md
agents/cast-exploration-how/: cast-exploration-how.md  config.yaml
agents/cast-exploration-render-checker/: cast-exploration-render-checker.md  config.yaml
agents/cast-exploration-what/: cast-exploration-what.md  config.yaml
agents/cast-explore-workflow/: README.md  (+4 more)
cast-server/: .gitignore  README.md  alembic.ini  app.py  config.py  conftest.py  deps.py  design-system.md
db/: schema.sql
docs/: ASSETS.md  ci-verification.md  config.md  delegation-pattern.md  how-it-fits.md  index.html  maker-checker.md  multi-harness.md  release-checklist.md  roadmap.md  terminals.md  thesis.md  troubleshooting.md
migrations/: README.md
prototype/: index.html
templates/: CLAUDE.md.template  cast-spec.template.md
tests/: Dockerfile.test-e2e  README.md  e2e-test.sh  fake_bin_helper.py  setup-correctness-test.sh  test_agent_registry_filesystem.py  test_audit_interdependencies.py  test_b1_domain_search.py  test_b2_inline_decision.py  test_b3_auto_review.py  test_b3_full_chain.py  test_b4_review_delegation.py  test_b5_atomic_write.py  test_b5_file_polling.py  test_b6_terminal_resolution.py  test_bootstrap_common.py  test_cast_doctor.py  test_cast_init.sh  test_cast_upgrade.sh  test_doc_grep_sweep.py  test_generate_skills.py  test_lint_anonymization.py  test_migrations.py  test_phase1b_prompt_pins.py  test_portability_verification.py  test_portable_launchers.py  test_setup_flow.py  test_setup_merger.py  test_sp3a_classify_integration_pins.py  test_us10_tshirt_estimates.py  test_us13_no_open_questions.py  test_us14_next_steps_typed.py  test_us7_spec_kit_shape.py
(+1474 files in other folders)
