[project]
name = "diecast"
version = "0.0.0"
description = "Diecast — open-source extraction of TaskOS / LinkedOut agent harness."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Apache-2.0" }
dependencies = [
    "pyyaml>=6.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
    "markdown>=3.5",
    "pydantic>=2.0",
    "python-multipart>=0.0.9",
    "alembic>=1.13",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "jsonschema>=4.26.0",
    "psutil>=5.9",
    "pytest>=8.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["cast-server"]
include = ["cast_server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"
markers = [
    "integration: integration test (spawns real processes / binds ports)",
]
