[project]
name = "diecast"
version = "0.0.0"
description = "Diecast — agent harness and orchestration runtime for Claude Code."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Apache-2.0" }
dependencies = [
    "pyyaml>=6.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
    "markdown>=3.5",
    "pydantic>=2.0",
    "python-multipart>=0.0.9",
    "alembic>=1.13",
]

[dependency-groups]
dev = [
    "click>=8.1",
    "httpx>=0.28.1",
    "jsonschema>=4.26.0",
    "psutil>=5.9",
    "pytest>=8.0",
    "pyyaml>=6.0",
]

[project.scripts]
precommit-tests = "cast_server.dev_tools.precommit_tests:precommit_tests"
cast-hook       = "cast_server.cli.hook:main"

# NOTE: After `pip install -e ".[test]"`, run `playwright install chromium` once
# to fetch the browser binary. Auto-install is intentionally avoided.
[project.optional-dependencies]
test = [
    "playwright>=1.45.0",
    "pytest-rerunfailures>=14.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["cast-server"]
include = ["cast_server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"
markers = [
    "integration: integration test (spawns real processes / binds ports)",
]
